--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -8,8 +8,6 @@ date: 2025-12-03
 location: "Debrecen, Hungary"
 ---
 
-evaulation_01.md
-
 # Evaluation
 
 ## Neptun code(s): QX4P71
@@ -49,7 +47,7 @@ evaulation_01.md
 ## Neptun code(s): G9UB1S, H9Z9RE
 - **Recommended grade(s):** 4
 - **Textual evaluation:**
- The submission meets the requirements for a grade of 4. The task is related to text processing and uses text data. Several preprocessing and cleaning procedures are implemented, including text cleaning, tokenization, vectorization, and data splitting for training, validation, and testing. Machine learning models (Logistic Regression, Random Forest) and a deep learning model (DistilBERT Transformer) are trained for text classification. The models are evaluated on a test dataset using multiple metrics (accuracy, precision, recall, F1, roc_auc). Visualizations are used to examine the operation of the model, as mentioned in the video presentation. Data mining analysis is performed to examine data behavior and balance, specifically addressing class imbalance through downsampling. Unit tests for data cleaning functions are also included, as confirmed by the video. The conclusion provided is consistent with the benchmark performed on the models.
+ The submission meets the requirements for a grade of 4. The task is related to text processing and uses text data. Several preprocessing and cleaning procedures are implemented, including text cleaning, tokenization, vectorization, and data splitting for training, validation, and testing. Machine learning models (Logistic Regression, Random Forest) and a deep learning model (DistilBERT Transformer) are trained for text classification. The models are evaluated on a test dataset using multiple metrics (accuracy, precision, recall, F1, roc_auc). Visualizations are used to examine the operation of the model, as mentioned in the video presentation. Data mining analysis is performed to examine data behavior and balance, specifically addressing class imbalance through downsampling. Unit tests for data cleaning functions are also included, as confirmed by the video. The conclusion provided is consistent with the benchmark performed on the models. Unfortunately, the last model is a pre-trained transformer, so in this case, the grade is 4.
 
 ## Neptun code(s): DOPB1V, CXFH9G, B2XKP4
 - **Recommended grade(s):** 4
@@ -77,7 +75,7 @@ evaulation_01.md
  The submission meets the requirements for a grade of 4. The task is related to text processing and utilizes text data, specifically English news from wikinews. Several preprocessing and cleaning steps are implemented, including text cleaning (removing wiki markup), tokenization (splitting into words and then characters), and preparing training, validation (implicitly, as the last 64 samples are reserved for testing, suggesting a split), and test datasets. A character-level language model (CNN-based) is trained, which is a text processing model, and evaluated on a test dataset. The model's operation is demonstrated through mobile typing suggestions and analyzed using the Keystroke Savings Rate metric. Data mining analysis is not explicitly performed, which prevents a grade of 5. Unit tests for data cleaning are not included, which is a requirement for a grade of 4. However, the video presentation details the preprocessing steps, vocabulary building, model training, and evaluation, showing a coherent workflow. The model's performance is evaluated using a specific metric (Keystroke Savings Rate), and the video implies visualizations through the CSV output for analysis, although explicit visualizations are not present in the code evaluation. The explanation of the character-to-word prediction logic and the evaluation process is clear and consistent between the code evaluation and the video. The model is trained to predict words based on preceding characters, and its effectiveness is measured by how many keystrokes are saved. The process of building the corpus, cleaning the data, preparing it for training, and then evaluating the model is well-described and aligns with the criteria for a grade of 4, with the exception of the missing unit tests for data cleaning and explicit data mining analysis.
 
 ## Neptun code(s): AD0ULJ
-- **Recommended grade(s):** 4
+- **Recommended grade(s):** 5
 - **Textual evaluation:**
  The submission meets the requirements for a grade of 4. The project is related to text processing and uses text data. It includes several preprocessing and cleaning procedures such as data cleaning, target engineering (binary conversion), and splitting data into training and testing sets. Machine learning models (Logistic Regression, KNeighborsClassifier, DecisionTreeClassifier, RandomForestClassifier) are trained and evaluated on a test dataset. The model's operation is demonstrated in a console application. Data mining analysis is performed, including checking for missing values, duplicates, and exploratory data analysis with visualizations like heatmaps and bar plots comparing model performance. Unit tests are included for data cleaning and application functionality. The model is evaluated using multiple metrics (accuracy, precision, recall, f1-score), and visualizations are used to compare model performance and analyze the confusion matrix. The video presentation is coherent with the code evaluation, explaining the steps taken and demonstrating the application's functionality. The conclusion provided in the code evaluation is consistent with the project's scope and findings.
 
@@ -97,9 +95,9 @@ evaulation_01.md
  The submission meets all the requirements for a grade of 5. The project is a text processing task that utilizes text data, specifically the 20 news group dataset, for classifying articles into 'Medical' or 'Space' categories. It includes a comprehensive set of preprocessing and cleaning procedures such as lowercasing, URL removal, non-alphabetic character removal, and extra space elimination. Tokenization, vectorization (TF-IDF with unigrams/bigrams, and sequence conversion for LSTM), and data splitting into training, validation, and test sets are all implemented. Three distinct machine learning models (Logistic Regression, SVM, and LSTM) are trained and evaluated. The evaluation is complex, involving multiple metrics (accuracy, precision, recall, f1-score, roc_auc) and visualizations (ROC curves, comparison table), constituting a benchmark to select the best model. The operation of the best model is demonstrated through a Gradio application, fulfilling the requirement of packaging the model into an application. Data mining analysis was performed, examining dataset distribution, text length statistics, and class balance. Unit tests are included for data cleaning, ensuring reliability. The video presentation is coherent with the code evaluation, detailing the pipeline from data loading and analysis to model training, evaluation, and application deployment. The conclusion drawn from the benchmark is consistent with the task. The project demonstrates a strong understanding of NLP concepts and their practical application.
 
 ## Neptun code(s): QY6ASR, X5AZ5C
-- **Recommended grade(s):** 4
+- **Recommended grade(s):** 5
 - **Textual evaluation:**
- The project meets the requirements for a grade of 4. It successfully addresses a text processing task (bot detection on social media) using text data. Several preprocessing and cleaning steps are implemented, including text cleaning, feature engineering, tokenization, and data splitting for training, validation, and testing. Machine learning models (Logistic Regression, Random Forest, XGBoost) are trained and evaluated on a test dataset. The operation of the best model (XGBoost) is demonstrated in the video, and the code is packaged as a reusable module. Data mining analysis is performed, examining class distribution and feature behavior, and visualizations are used to illustrate these findings (e.g., word clouds, correlation matrix, feature distributions). Unit tests are mentioned and a word cloud unit test is shown, though the source code evaluation indicates they are only partly included for data cleaning. The model is evaluated using multiple metrics like accuracy, classification report, and confusion matrix. The video and code evaluation are consistent in their description of the project's scope and methodology. The conclusion drawn about XGBoost's effectiveness is well-supported by the evaluation metrics. The project falls short of a grade of 5 because it does not build at least 3 *different* models for a complex benchmark comparison, and the evaluation of the best model on the test set is not explicitly detailed as a separate step after the benchmark. While multiple models were trained, they were primarily compared against each other rather than being part of a more extensive comparative analysis to select the absolute best for final testing.
+ The project meets the requirements for a grade of 5. It successfully addresses a text processing task (bot detection on social media) using text data. Several preprocessing and cleaning steps are implemented, including text cleaning, feature engineering, tokenization, and data splitting for training, validation, and testing. Machine learning models (Logistic Regression, Random Forest, XGBoost) are trained and evaluated on a test dataset. The operation of the best model (XGBoost) is demonstrated in the video, and the code is packaged as a reusable module. Data mining analysis is performed, examining class distribution and feature behavior, and visualizations are used to illustrate these findings (e.g., word clouds, correlation matrix, feature distributions). Unit tests are mentioned and a word cloud unit test is shown, though the source code evaluation indicates they are only partly included for data cleaning. The model is evaluated using multiple metrics like accuracy, classification report, and confusion matrix. The video and code evaluation are consistent in their description of the project's scope and methodology. The conclusion drawn about XGBoost's effectiveness is well-supported by the evaluation metrics.
 
 ## Neptun code(s): D2SBLH
 - **Recommended grade(s):** 5
@@ -298,7 +296,7 @@ evaulation_04.md
 ## Neptun code(s): VL4F3Q, DQMXK2
 - **Recommended grade(s):** 4
 - **Textual evaluation:**
- The project meets the requirements for a grade of 4. It is a text processing task that uses text data for implementation, involving several preprocessing and cleaning procedures such as text cleaning, feature engineering, tokenization, and vectorization. A machine learning model (Random Forest and XGBoost) was trained and evaluated on a test dataset. The model is packaged into a web application demonstrated in the video. Data mining analysis was performed, and visualizations were used to examine the data. However, the requirement for unit tests for each preprocessing step was not fully met, as the source code evaluation indicated 'none' for standard unit tests for data cleaning, and the video mentioned unit tests for each model but not specifically for preprocessing. Additionally, while the video mentions training three different models, the source code evaluation only lists two (Random Forest and XGBoost), and the video's claim of using unit tests for each of the three models is not clearly substantiated in the provided evaluations. The evaluation also mentions a validation set in the source code evaluation, but the video and source code evaluation state 'False' for 'includes_validation_set', creating a slight inconsistency. Despite these minor shortcomings, the project demonstrates a strong understanding of NLP concepts and a functional application.
+ The project meets the requirements for a grade of 4. It is a text processing task that uses text data for implementation, involving several preprocessing and cleaning procedures such as text cleaning, feature engineering, tokenization, and vectorization. A machine learning model (Random Forest and XGBoost) was trained and evaluated on a test dataset. The model is packaged into a web application demonstrated in the video. Data mining analysis was performed, and visualizations were used to examine the data. However, the requirement for unit tests for each preprocessing step was not fully met, as the source code evaluation indicated 'none' for standard unit tests for data cleaning, and the video mentioned unit tests for each model but not specifically for preprocessing. Additionally, while the video mentions training three different models, the source code evaluation only lists two (Random Forest and XGBoost).
 
 ## Neptun code(s): E1RCGX, QO2OYW
 - **Recommended grade(s):** 4
@@ -387,7 +385,7 @@ The project builds three distinct models (Multinomial Naive Bayes, Logistic Regr
 ## Neptun code(s): P7ZKGB
 - **Recommended grade(s):** 4
 - **Textual evaluation:**
- The submission meets the requirements for a grade of 4. The task is related to text processing and utilizes text data, specifically customer banking queries from the Banking 77 dataset. Several preprocessing and cleaning procedures are implemented, including case folding, noise reduction, tokenization, stop word removal, and TF-IDF vectorization. A machine learning model (LinearSVC) is trained and evaluated on a test dataset. The video demonstrates the operation of the system as a console application. Data mining analysis is mentioned as being performed, examining the behavior and balance of the data, and the model is evaluated with several metrics (f1_score, accuracy, precision, recall). The video also touches upon visualizations, although the source code evaluation indicates none were included. The conclusion provided in the source code evaluation is consistent with the video's discussion of model selection. The submission also attempts to build multiple models (Logistic Regression, Multinomial Naive Bayes, Neural Network) and compares them, which aligns with some aspects of a grade of 5, but the evaluation of these models is not as complex or benchmarked as required for a 5. Specifically, the benchmark and selection of the best model based on validation data, followed by final evaluation on test data, is not fully elaborated for all models. The requirement for unit tests for each preprocessing step is not met, as indicated by 'none' in the source code evaluation.
+ The submission meets the requirements for a grade of 4. The task is related to text processing and utilizes text data, specifically customer banking queries from the Banking 77 dataset. Several preprocessing and cleaning procedures are implemented, including case folding, noise reduction, tokenization, stop word removal, and TF-IDF vectorization. A machine learning model (LinearSVC) is trained and evaluated on a test dataset. The video demonstrates the operation of the system as a console application. Data mining analysis is mentioned as being performed, examining the behavior and balance of the data, and the model is evaluated with several metrics (f1_score, accuracy, precision, recall). The video also touches upon visualizations, although the source code evaluation indicates none were included. The conclusion provided in the source code evaluation is consistent with the video's discussion of model selection. The submission also attempts to build multiple models (Logistic Regression, Multinomial Naive Bayes, Neural Network) and compares them, which aligns with some aspects of a grade of 5, but the evaluation of these models is not as complex or benchmarked as required for a 5. Specifically, the benchmark and selection of the best model based on validation data, followed by final evaluation on test data, is not fully elaborated for all models. The requirement for unit tests for each preprocessing step is not met.
 
 ## Neptun code(s): O0V6O4
 - **Recommended grade(s):** 5
@@ -414,6 +412,11 @@ There are not video and code link.
 - **Textual evaluation:**
 Code link was not access.
 
+## Neptun code(s): VODJS5
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+Code link was not access.
+
 ## Neptun code(s): CB52IT
 - **Recommended grade(s):** 
 - **Textual evaluation:**
@@ -433,3 +436,13 @@ Too many absences.
 - **Recommended grade(s):** 
 - **Textual evaluation:**
 Too many absences.
+
+## Neptun code(s): CPXZ3M
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+There are not video and code link.
+
+## Neptun code(s): K2524W
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+There is not video.
