--- a/materials/NLP-I/submitted/2025-2-eval.md
+++ b/materials/NLP-I/submitted/2025-2-eval.md
@@ -446,3 +446,8 @@ There are not video and code link.
 - **Recommended grade(s):** 
 - **Textual evaluation:**
 There is not video.
+
+## Neptun code(s): VODJS5
+- **Recommended grade(s):** 
+- **Textual evaluation:**
+The solution to the task was too simple. There is no unit test or complex benchmark, nor a conclusion or app.
