--- a/materials/AIPD/submitted/2025-2.md
+++ b/materials/AIPD/submitted/2025-2.md
@@ -17,11 +17,9 @@ location: "Debrecen, Hungary"
 
 <iframe width="1250" height="703" src="https://www.youtube.com/embed/3lQI1rMqppE" title="aipd bead 2025 2" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-## 3
+## 3 - [pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2025/Customer Segmentation for Marketing Decisions.pdf)
 
 <iframe width="1250" height="703" src="https://www.youtube.com/embed/q4bXIPXzyqw" title="aipd bead 2025 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
-[pdf](https://robertlakatos.github.io/me/materials/AIPD/submitted/2025/Customer Segmentation for Marketing Decisions.pdf)
 
 ## 4
 
